Fix: Alignment on popup titles Fix: User text-selecting the canvas

--- a/pages/place.module.css
+++ b/pages/place.module.css
@@ -5,6 +5,7 @@
     position: relative;
     touch-action: none;
     background: #eaeaea;
+    user-select: none;
 
     @media screen and (max-height: 500px) and (orientation: landscape) {
         width: 100vw;
@@ -12,12 +13,13 @@
         position: absolute;
         top: 0;
     }
-}
 
-#canvas {
-    touch-action: none;
-    box-shadow: var(--shadow);
-    flex-grow: 1;
+    #canvas {
+        touch-action: none;
+        box-shadow: var(--shadow);
+        flex-grow: 1;
+        user-select: none;
+    }
 }
 
 .overlaygui {
